test/conformance/chainsaw/mutate/refactor/k10-minimum-retention/crd-assert.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: policies.config.kio.kasten.io
status:
  acceptedNames:
    kind: Policy
    listKind: PolicyList
    plural: policies
    singular: policy
  storedVersions:
  - v1alpha1
