test/conformance/chainsaw/mutate/refactor/k10-minimum-retention/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: k10-minimum-retention
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: crd.yaml
    - assert:
        file: crd-assert.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: k10-minimum-retention
  - name: step-03
    try:
    - apply:
        file: resource.yaml
    - assert:
        file: resource-mutated.yaml
